2003-12-09  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b1)

	* Some apps wouldn't let you drag and drop pictures to GR. This is now fixed
	  and DnD should work from Canon Zoombrowser, Photoshop Album and probably
	  also Linux file managers. No thanks to an article in JavaWorld that
	  had bad code for DnD. Thanks to Jeff "logullo" for testing many debug
	  builds for me.

2003-11-25  Pierre-Luc Paour <gallery@paour.com> (1.2)

	* Release
	* Fixed the usual Java 1.3 bug.

2003-11-09  Pierre-Luc Paour <gallery@paour.com> (1.2-b15)

	* Fixed jpegtran execution on platforms other than Win32 (bad command line)
	* Added more debug when executing external commands (now prints stdout and stderr
	  from external command to log).
	* For Mac build, added im.properties and jpegtran.properties to img.jar
	  so Mac app can be completely self-contained.
	* thanks to Amedeo Paglione for suggesting above fixes.

2003-11-06  Pierre-Luc Paour <gallery@paour.com> (1.2-b14)

	* Almost complete rewrite of drag and drop code, fixing all the known bugs
	* Implemented cut-copy-paste for the list of pictures, so pictures can
	  now at long last be moved between albums (before upload)!
	* Fixed the QuickConfig preference not updating the other preference panels.
	  The fix is to close the preference dialog after QuickConfig is used, to
	  prevent conflicts.

2003-11-03  Pierre-Luc Paour <gallery@paour.com> (1.2-b13)

	* Better memory management for thumbnails and previews. Memory errors
	  should be rarer, and thumbnail/preview generation should be quicker.
	* Added button to sort files alphabetically in an album.
	* GR should now find jpegtran and ImageMagick in that if they are
	  available in the PATH on non-Windows platforms. Added a long-winded
	  warning at the tail-end of the installer about how to install them.

2003-10-30  Pierre-Luc Paour <gallery@paour.com> (1.2-b12)

	* Added warning when logging out or quitting and pictures are left in
	  a gallery, so no data is lost.